assets/styles/layout/header/menu/_component.scss
@use "variable" as *;

.mega-submenu {
  > .submenu-wrapper {
    > .submenu-item {
      color: #000000;
      white-space: nowrap;
      font-weight: 300;
      margin-top: 1rem;
    }
  }
}

.menu-wrapper {
  > .menu-item.has-children {
    margin-right: 2rem;
    &::after {
      background-image: url($menu-icon);
      content: ' ';
      display: block;
      height: 1rem;
      width: 1rem;
      background-position: center;
      background-size: contain;
      background-repeat: no-repeat;
      position: absolute;
      right: .3rem;
      top: 0.3rem;
    }
  }
}

@media screen and (min-width: 1024px) {

  .menu-wrapper {
    position: relative;

    .menu-item {
      text-transform:lowercase;
      font-weight:300;
    }

    &:hover {
      .mega-submenu {
        display: block;
        opacity: 1;
      }
    }
  }

  .menu-item {
    margin-right: 1rem;
  }

  .mega-submenu {
    position: absolute;
    top: 100%;
    width: auto;
    padding: 1rem;
    background: white;
    right: 50%;
    transform: translateX(50%);
    opacity: 0;
    display: none;
    box-shadow: 0 3px 6px rgba(51, 51, 51, 0.2);
    border-radius: 5px;
    z-index: 10;

    > .submenu-wrapper {
      svg {
        display: none;
      }

      > .submenu-item {
        margin-bottom: 1rem;
        margin-top: 0;
        font-weight:300;
      }

      .submenu-wrapper {
        > .menu-item {
          font-weight:300;
        }
      }

      &:not(:last-of-type) {
        margin-right: 1rem;
      }
    }
  }
}

@media screen and (max-width: 1023px) {
  .navbar-wrapper {
    position: fixed;
    z-index: 5;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    backdrop-filter: blur(3px);
  }

  .navbar {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    background: white;
    z-index: 10;
    padding: 1rem;
    box-shadow: 0 3px 6px rgba(51, 51, 51, 0.2);
    overflow-y: scroll;

    .admin-bar & {
      top: 46px;
    }
  }

  .navmenu-item {
    padding-bottom: .25rem;
    margin-bottom: .5rem;
    border-bottom: 1px solid rgba(51, 51, 51, 0.2);
  }

  .menu-item {
    display: block;
  }

  .mega-submenu {
    margin-bottom: .5rem;

    svg {
      display: none;
    }
    .submenu-item {
      margin-left: .5rem;
    }
  }
}

